[package]
authors = ["Patrick Byrne <oss@contact.patrickbyrne.net>"]
description = "Roll dice from the command line."
edition = "2018"
license = "MIT"
name = "dice-roller"
repository = "https://github.com/pbyrne/roller"
version = "0.1.0"

[dependencies]
clap = "2.33.0"
rand = "0.6.5"
regex = "1.1.5"
