[package]
authors = ["Patrick Byrne <oss@contact.patrickbyrne.net>"]
description = "Roll dice from the command line."
edition = "2018"
exclude = ["HomebrewFormula"]
license = "MIT"
name = "dice-roller"
readme = "README.md"
repository = "https://github.com/pbyrne/roller"
version = "0.1.3"

[badges]
travis-ci = { repository = "pbyrne/roller" }

[dependencies]
clap = "2.33.0"
rand = "0.6.5"
regex = "1.1.5"
